@@ -1,5 +1,5 @@
 /*
- * COPYRIGHT (c) 2011 The Science and Technology Facilities Council (STFC)
+ * COPYRIGHT (c) 2011, 2013 The Science and Technology Facilities Council (STFC)
  * All Rights Reserved.
  * This code is published under the Eclipse Public License.
  *
@@ -28,6 +28,8 @@
 #define ma77_alter ma77_alter_d
 #define ma77_restart ma77_restart_d
 #define ma77_finalise ma77_finalise_d
+#define ma77_solve_fredholm ma77_solve_fredholm_d
+#define ma77_lmultiply ma77_lmultiply_d
 #endif
 
 typedef double ma77pkgtype_d_;
@@ -80,6 +82,14 @@ struct ma77_control_d {
    long int storage_indef;
    ma77pkgtype_d_ u;       /* Pivot tolerance*/
    ma77pkgtype_d_ umin;    /* Minimum pivot tolerance*/
+
+#if defined(COINHSL_HSL2013) || !defined(COINHSL_HAS_MA77)
+   /* Controls used by ma77_solve_fredholm */
+   ma77pkgtype_d_ consist_tol;   /* Tolerance for consistent singular system */
+
+   /* Pad data structure to allow for future growth */
+   int ispare[5]; long int lspare[5]; ma77pkgtype_d_ rspare[5];
+#endif
 };
 
 /***************************************************/
@@ -117,56 +127,70 @@ struct ma77_info_d {
    int unit_restart;
    int unused;
    ma77pkgtype_d_ usmall;
+
+   /* if we do not have MA77, we assume its is loaded via the linear solver loader, for which we assume HSL 2013 */
+#if defined(COINHSL_HSL2013) || !defined(COINHSL_HAS_MA77)
+   /* Pad data structure to allow for future growth */
+   int ispare[5]; long int lspare[5]; ma77pkgtype_d_ rspare[5];
+#endif
 };
 
 /* Initialise control with default values */
-void ma77_default_control(struct ma77_control_d *control);
+void ma77_default_control_d(struct ma77_control_d *control);
 void ma77_open_nelt(const int n, const char* fname1, const char* fname2,
    const char *fname3, const char *fname4, void **keep,
    const struct ma77_control_d *control, struct ma77_info_d *info,
    const int nelt);
-void ma77_open(const int n, const char* fname1, const char* fname2,
+void ma77_open_d(const int n, const char* fname1, const char* fname2,
    const char *fname3, const char *fname4, void **keep,
    const struct ma77_control_d *control, struct ma77_info_d *info);
 void ma77_input_vars(const int idx, const int nvar, const int list[],
    void **keep, const struct ma77_control_d *control, struct ma77_info_d *info);
-void ma77_input_reals(const int idx, const int length,
+void ma77_input_reals_d(const int idx, const int length,
    const ma77pkgtype_d_ reals[], void **keep, const struct ma77_control_d *control,
    struct ma77_info_d *info);
 /* Analyse the sparsity pattern and prepare for factorization */
 void ma77_analyse(const int order[], void **keep,
    const struct ma77_control_d *control, struct ma77_info_d *info);
 /* To factorize the matrix */
-void ma77_factor(const int posdef, void **keep, 
+void ma77_factor_d(const int posdef, void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info,
    const ma77pkgtype_d_ *scale);
 /* To factorize the matrix AND solve AX = B */
-void ma77_factor_solve(const int posdef, void **keep, 
+void ma77_factor_solve_d(const int posdef, void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info,
    const ma77pkgtype_d_ *scale, const int nrhs, const int lx,
    ma77pkgtype_d_ rhs[]);
 /* To solve AX = B using the computed factors */
-void ma77_solve(const int job, const int nrhs, const int lx, ma77pkgtype_d_ x[],
+void ma77_solve_d(const int job, const int nrhs, const int lx, ma77pkgtype_d_ x[],
    void **keep, const struct ma77_control_d *control, struct ma77_info_d *info,
    const ma77pkgtype_d_ *scale);
-void ma77_resid(const int nrhs, const int lx, const ma77pkgtype_d_ x[],
+void ma77_resid_d(const int nrhs, const int lx, const ma77pkgtype_d_ x[],
    const int lresid, ma77pkgtype_d_ resid[], void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info,
    ma77pkgtype_d_ *anorm_bnd);
-void ma77_scale(ma77pkgtype_d_ scale[], void **keep, 
+void ma77_scale_d(ma77pkgtype_d_ scale[], void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info,
    ma77pkgtype_d_ *anorm);
-void ma77_enquire_posdef(ma77pkgtype_d_ d[], void **keep, 
+void ma77_enquire_posdef_d(ma77pkgtype_d_ d[], void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info);
-void ma77_enquire_indef(int piv_order[], ma77pkgtype_d_ d[], void **keep, 
+void ma77_enquire_indef_d(int piv_order[], ma77pkgtype_d_ d[], void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info);
-void ma77_alter(const ma77pkgtype_d_ d[], void **keep, 
+void ma77_alter_d(const ma77pkgtype_d_ d[], void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info);
-void ma77_restart(const char *restart_file, const char *fname1, 
+void ma77_restart_d(const char *restart_file, const char *fname1, 
    const char *fname2, const char *fname3, const char *fname4, void **keep, 
    const struct ma77_control_d *control, struct ma77_info_d *info);
+/* exists only for HSL 2013 */
+void ma77_solve_fredholm_d(int nrhs, int flag_out[], int lx, ma77pkgtype_d_ x[],
+   void **keep, const struct ma77_control_d *control,
+   struct ma77_info_d *info, const ma77pkgtype_d_ *scale);
+/* exists only for HSL 2013 */
+void ma77_lmultiply_d(int trans, int k, int lx, ma77pkgtype_d_ x[], int ly,
+   ma77pkgtype_d_ y[], void **keep, const struct ma77_control_d *control,
+   struct ma77_info_d *info, const ma77pkgtype_d_ *scale);
 /* To clean up memory in keep */
-void ma77_finalise(void **keep, const struct ma77_control_d *control,
+void ma77_finalise_d(void **keep, const struct ma77_control_d *control,
    struct ma77_info_d *info);
 
 #endif
