@@ -1,5 +1,5 @@
 /*
- * COPYRIGHT (c) 2011 Science and Technology Facilities Council (STFC)
+ * COPYRIGHT (c) 2011, 2013 Science and Technology Facilities Council (STFC)
  * All Rights Reserved.
  * This code is published under the Eclipse Public License.
  *
@@ -9,13 +9,32 @@
 #ifndef HSL_MC68I_H
 #define HSL_MC68I_H
 
+#include "IpoptConfig.h"
+#ifdef COIN_HAS_HSL
+#include "CoinHslConfig.h"
+#endif
+
+/* if we do not have MC68, we assume its is loaded via the linear solver loader, for which we assume HSL 2013 */
+#if defined(COINHSL_HSL2013) || !defined(COINHSL_HAS_MC68)
+#ifndef mc68_default_control
+#define mc68_control mc68_control_i
+#define mc68_info mc68_info_i
+#define mc68_default_control mc68_default_control_i
+#define mc68_order mc68_order_i
+#endif
+#endif
+
 struct mc68_control {
    /* Extra options for C version */
    int f_array_in;      /* 0 for C array indexing, 1 for Fortran indexing */
    int f_array_out;     /* 0 for C array indexing, 1 for Fortran indexing
                          * NOTE: 2x2 pivot information discarded if C indexing
                          * is used for output! */
+#if defined(COINHSL_HSL2013) || !defined(COINHSL_HAS_MC68)
+   long min_l_workspace; /* Initial size of workspace, as argument in Fortran */
+#else
    int min_l_workspace; /* Initial size of workspace, as argument in Fortran */
+#endif
    /* Options from Fortran version */
    int lp;              /* stream number for error messages */
    int wp;              /* stream number for warning messages */
@@ -42,7 +61,7 @@ struct mc68_info {
 /* Set default values for control struct */
 void mc68_default_control(struct mc68_control *control);
 /* Perform ordering */
-void mc68_order(const int ord, const int n, const int ptr[], const int row[],
+void mc68_order(int ord, int n, const int ptr[], const int row[],
    int perm[], const struct mc68_control *control, struct mc68_info *info);
 
 #endif
